--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: ga.gnailiad.ga, port: 2443, type: vmess, uuid: 5b6fd9e2-0bf7-4eee-92d6-21b7bdae7062, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.18MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 乌克兰-897.1KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11199, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 匈牙利-2.57MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.17MB/s(Youtube:不良林), server: ga.gnailiad.tk, port: 1443, type: vmess, uuid: deaf378f-515f-4832-bfc1-ed937edc78c3, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-392.5KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇳🇱 荷兰-3.28MB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇳🇱 荷兰-1.22MB/s(Youtube:不良林), server: 213.183.59.206, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇳🇱 荷兰-3.13MB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-378.7KB/s(Youtube:不良林)
-      - 乌克兰-897.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 匈牙利-2.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
