--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇳🇱 荷兰-3.28MB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇳🇱 荷兰-1.22MB/s(Youtube:不良林), server: 213.183.59.206, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇳🇱 荷兰-3.13MB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇫🇷 法国-1.47MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-3.56MB/s(Youtube:不良林), server: ga.gnailiad.tk, port: 1443, type: vmess, uuid: deaf378f-515f-4832-bfc1-ed937edc78c3, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-17.88MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.06MB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
+  - {name: 🇳🇱 荷兰-2.84MB/s(Youtube:不良林), server: 213.183.59.214, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-1.17MB/s(Youtube:不良林), server: 213.183.59.206, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-3.21MB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-1.74MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-213.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
